# ChessClash

./: CMakeLists.txt  README.md  run.sh
.cache/clangd/index/: activePlayerInterface.cpp.6450FE6E36B950B6.idx  bandit.cpp.7D13CD69D579F73A.idx  bandit.h.6B02E3A71814B4AA.idx  board.cpp.7373733D5B39526A.idx  board.h.017C9C5C599EF13B.idx  boardRender.cpp.AAA7B90150BF9A03.idx  boardRender.h.8934AC4FFB7C244B.idx  capture.cpp.5AB4C19D8E8E3046.idx  capture.h.873B3C7CAC12EAA1.idx  chessVector.cpp.968BD987A6E6E829.idx  chessVector.h.902C71F2FC29E6DB.idx  constants.h.C24354B2A38586F4.idx  general.cpp.BABAA5C950C940B1.idx  general.h.9BF338139CC69771.idx  interpolations.cpp.CECF76349783CCCB.idx  kamikaze.cpp.1AF84835DEBE9F44.idx  kamikaze.h.5F348588E139980A.idx  logger.cpp.422EAAEE6AEE5258.idx  logger.h.3A8BE586827284A0.idx  main.cpp.6D54A0DFA645B48F.idx  onlinePlayer.cpp.D118A183B62FF9E5.idx  onlinePlayer.h.4E9BDD9F5D7E0D42.idx  player.cpp.3300F0724A45E6A4.idx  player.h.7D2C9DFA4001BA65.idx  playerInterface.cpp.97413897F32FE432.idx  random.cpp.7CB8D3D73C9A9AB0.idx  random.h.0A38D37F6C79BD10.idx  recursive.cpp.1005B432D45E607B.idx  recursive.h.E636DDE779CD2B40.idx  renderBoard.cpp.3E0EFF939D5991BA.idx  renderBoard.h.2DB4E85B8486303E.idx  soundManager.cpp.5E96F76A87918AD8.idx  soundManager.h.0C1AF24E7156A3C9.idx  subGeneral.cpp.E795986C279F0AEC.idx  subGeneral.h.B74EA8AE75E99ACB.idx  tester.cpp.8687CA8DAB41DF69.idx  textureManager.cpp.EF8871ADBE75EADC.idx  textureManager.h.0C7BEC66B2CFDD39.idx  unKamikaze.cpp.E6399489F941937E.idx  unKamikaze.h.3B23688F4E0EA804.idx
src/: constants.h  main.cpp  tester.cpp
src/core/: activePlayerInterface.cpp  board.cpp  board.h  chessVector.cpp  chessVector.h  fastBoard.c  fastBoard.h  logger.cpp  logger.h  playerInterface.cpp
src/engines/: general.cpp  general.h  onlinePlayer.cpp  onlinePlayer.h  player.cpp  player.h  random.cpp  random.h  recursive.cpp  recursive.h  subGeneral.cpp  subGeneral.h
src/ui/: boardRender.cpp  boardRender.h  interpolations.cpp  menu.cpp  menu.h  renderBoard.cpp  renderBoard.h  soundManager.cpp  soundManager.h  textureManager.cpp  textureManager.h  uiInterface.h  windowInterface.cpp
